# flake8-qa-style

./: README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: pypi.yml  test.yml
flake8_qa_style/: config.py  plugins.py
flake8_qa_style/checkers/line_checkers/: _checker_with_lines.py  file_start_checker.py
flake8_qa_style/checkers/node_visitors/: __init__.py  _node_visitor.py  _visitor_with_filename.py  annotation_visitor.py  assert_visitor.py  async_visitor.py  function_call_visitor.py  with_visitor.py
flake8_qa_style/checkers/node_visitors/call_checkers/: __init__.py  print_checker.py  sleep_checker.py
flake8_qa_style/checkers/raw_checkers/: __init__.py  _raw_checker.py  file_start_checker.py  with_checker.py
flake8_qa_style/errors/: __init__.py  errors.py
rules/: CS008.md  CS009.md  CS010.md
tests/: test_helpers.py
tests/line_checkers/: test_file_start.py
tests/line_checkers_tests/: test_backslash_with.py
tests/node_visitors_tests/: test_annotation.py  test_assert.py  test_async.py  test_few_statements_in_with.py  test_nested_with.py  test_print.py  test_sleep.py
tests/raw_checkers_tests/: test_file_start.py
