[metadata]
name = flake8_qa_style
version = 1.0.1

[options.entry_points]
flake8.extension =
    CS=flake8_qa_style.plugins:QAStylePlugin

[flake8]
max_line_length = 119
exclude = .git, .venv, venv, _files
per_file_ignores =
    __init__.py:F401
ignore = W503

# flake8-qa-style params
skip_property_return_annotation = true


[mypy]
exclude = venv, .gitignore, _files
ignore_missing_imports = true
